[gd_scene load_steps=4 format=3 uid="uid://ccgjyb3mnmv5"]

[ext_resource type="Script" path="res://scripts/main_options.gd" id="1_yvsyk"]

[sub_resource type="Gradient" id="Gradient_vcfly"]
offsets = PackedFloat32Array(0, 0.0193548, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.0451613, 0.0451613, 0.0451613, 1, 0.116875, 0.670494, 0.947804, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_kaubf"]
gradient = SubResource("Gradient_vcfly")

[node name="MainOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvsyk")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -14.0
offset_right = 4.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
value = 50.0
tick_count = 5

[node name="VolumeLabel" type="Label" parent="CenterContainer/VBoxContainer/HSlider"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -214.0
offset_top = -23.5
offset_right = -146.0
offset_bottom = 2.5
grow_horizontal = 2
text = "Volume: "

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Main Menu"
icon = SubResource("GradientTexture1D_kaubf")

[connection signal="value_changed" from="CenterContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
